--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -59,26 +59,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: pip is being invoked by an old script wrapper. This will fail in a future version of pip.\n",
-      "Please see https://github.com/pypa/pip/issues/5599 for advice on fixing the underlying issue.\n",
-      "To avoid this problem you can invoke Python with '-m pip' instead of running pip directly.\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: SciencePlots in /home/heitor/.local/lib/python3.6/site-packages (1.0.8)\n",
-      "Requirement already satisfied: matplotlib in /home/heitor/.local/lib/python3.6/site-packages (from SciencePlots) (3.3.4)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/heitor/.local/lib/python3.6/site-packages (from matplotlib->SciencePlots) (0.10.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/heitor/.local/lib/python3.6/site-packages (from matplotlib->SciencePlots) (8.2.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/heitor/.local/lib/python3.6/site-packages (from matplotlib->SciencePlots) (1.3.1)\n",
-      "Requirement already satisfied: numpy>=1.15 in /home/heitor/.local/lib/python3.6/site-packages (from matplotlib->SciencePlots) (1.19.5)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /home/heitor/.local/lib/python3.6/site-packages (from matplotlib->SciencePlots) (2.4.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /home/heitor/.local/lib/python3.6/site-packages (from matplotlib->SciencePlots) (2.8.1)\n",
-      "Requirement already satisfied: six in /home/heitor/.local/lib/python3.6/site-packages (from cycler>=0.10->matplotlib->SciencePlots) (1.11.0)\n"
+      "Requirement already satisfied: SciencePlots in /home/heitor/.local/lib/python3.8/site-packages (1.0.8)\n",
+      "Requirement already satisfied: matplotlib in /home/heitor/.local/lib/python3.8/site-packages (from SciencePlots) (3.4.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /home/heitor/.local/lib/python3.8/site-packages (from matplotlib->SciencePlots) (2.4.7)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/heitor/.local/lib/python3.8/site-packages (from matplotlib->SciencePlots) (1.3.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /usr/lib/python3/dist-packages (from matplotlib->SciencePlots) (7.0.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/heitor/.local/lib/python3.8/site-packages (from matplotlib->SciencePlots) (0.10.0)\n",
+      "Requirement already satisfied: numpy>=1.16 in /home/heitor/.local/lib/python3.8/site-packages (from matplotlib->SciencePlots) (1.21.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /usr/lib/python3/dist-packages (from matplotlib->SciencePlots) (2.7.3)\n",
+      "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib->SciencePlots) (1.14.0)\n"
      ]
     }
    ],
