--- a/cloth.ipynb
+++ b/cloth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "source": [
     "import gzip\n",
     "import pandas as pd\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "source": [
     "def parse(path):\n",
     "    g = gzip.open(path, 'r')\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "source": [
     "df = getDF('./data/Clothing_Shoes_and_Jewelry.json.gz',{'reviewerID','asin'})"
    ],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "source": [
     "df.head()"
    ],
@@ -121,14 +121,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "source": [
     "df_filtered = df.drop_duplicates()"
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "source": [
     "df_filtered.shape, df.shape"
    ],
@@ -150,14 +150,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "source": [
     "users_consumption= df_filtered.groupby('reviewerID').count()"
    ],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "source": [
     "top_users = users_consumption.loc[users_consumption['asin'] >=5]"
    ],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "source": [
     "top_users=top_users.sample(100000)"
    ],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "source": [
     "top_users_set = set(top_users.index.values)"
    ],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "source": [
     "final_df = getDF('./data/Clothing_Shoes_and_Jewelry.json.gz',users=top_users_set)"
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "source": [
     "final_df.groupby('reviewerID')['asin'].count().value_counts()[:20]"
    ],
@@ -211,38 +211,56 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "5     22917\n",
-       "6     17153\n",
-       "7     12448\n",
-       "8      8865\n",
-       "9      6798\n",
-       "10     5325\n",
-       "11     4212\n",
-       "12     3296\n",
-       "13     2595\n",
-       "14     2136\n",
-       "15     1806\n",
-       "16     1476\n",
-       "17     1335\n",
-       "18     1106\n",
-       "19      964\n",
-       "20      832\n",
-       "21      691\n",
-       "22      576\n",
-       "23      512\n",
-       "24      478\n",
+       "5     23062\n",
+       "6     17261\n",
+       "7     12361\n",
+       "8      9124\n",
+       "9      6902\n",
+       "10     5201\n",
+       "11     4169\n",
+       "12     3199\n",
+       "13     2695\n",
+       "14     2109\n",
+       "15     1751\n",
+       "16     1456\n",
+       "17     1292\n",
+       "18     1068\n",
+       "19      922\n",
+       "20      755\n",
+       "21      647\n",
+       "22      579\n",
+       "23      530\n",
+       "24      452\n",
        "Name: asin, dtype: int64"
       ]
      },
      "metadata": {},
-     "execution_count": 39
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
+   "source": [
+    "#final_df.to_parquet('./data/amazon_clothing.parquet')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "final_df.to_csv('./data/amazon_clothing.csv')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "source": [
     "final_df.to_parquet('./data/amazon_clothing.parquet')"
    ],
