--- a/cloth.ipynb
+++ b/cloth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "import gzip\n",
     "import pandas as pd\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "def parse(path):\n",
     "    g = gzip.open(path, 'r')\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "source": [
     "df = getDF('./data/Clothing_Shoes_and_Jewelry.json.gz',{'reviewerID','asin'})"
    ],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "df.head()"
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "df_filtered = df.drop_duplicates()"
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "source": [
     "df_filtered.shape, df.shape"
    ],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "source": [
     "users_consumption= df_filtered.groupby('reviewerID').count()"
    ],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "source": [
     "top_users = users_consumption.loc[users_consumption['asin'] >=5]"
    ],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "source": [
     "top_users=top_users.sample(100000)"
    ],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "source": [
     "top_users_set = set(top_users.index.values)"
    ],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "final_df = getDF('./data/Clothing_Shoes_and_Jewelry.json.gz',users=top_users_set)"
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "source": [
     "final_df.groupby('reviewerID')['asin'].count().value_counts()[:20]"
    ],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "source": [
     "#final_df.to_parquet('./data/amazon_clothing.parquet')"
    ],
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "source": [
     "final_df.to_csv('./data/amazon_clothing.csv')"
    ],
@@ -260,10 +260,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "source": [
     "final_df.to_parquet('./data/amazon_clothing.parquet')"
    ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import math\n",
+    "def FindLayerNodesLinear(n_layers, first_layer_nodes, last_layer_nodes):\n",
+    "    layers = []\n",
+    "    \n",
+    "    nodes_increment = (last_layer_nodes - first_layer_nodes)/ (n_layers-1)\n",
+    "    nodes = first_layer_nodes\n",
+    "    for i in range(1, n_layers+1):\n",
+    "        layers.append(math.ceil(nodes))\n",
+    "        nodes = nodes + nodes_increment\n",
+    "    \n",
+    "    return layers"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "FindLayerNodesLinear(4,100,5)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
    "outputs": [],
    "metadata": {}
   }
